[build-system]
requires = ["setuptools", "setuptools-scm", "cython", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "pyqlib-core"
dynamic = ["version"]
description = "Qlib Core - Minimal Quantitative Research Platform"
requires-python = ">=3.8.0"
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }

dependencies = [
  "pyyaml",
  "numpy",
  "pandas>=1.1",
  "filelock>=3.16.0",
  "dill",
  "fire",
  "ruamel.yaml>=0.17.38",
  "tqdm",
  "joblib",
  "loguru",
  "pyarrow",
  "pydantic-settings",
  "setuptools-scm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "pylint",
  "mypy",
  "flake8",
]

[tool.setuptools]
packages = [
  "qlib",
]
license-files = []

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"